--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
 include: ['_pages']
-url: http://ibrewmyowncoffee.com
+baseurl: "/ibrewmyowncoffee"
+url: "http://alexcarpenter.me"
 permalink: /:categories/:title
 excerpt_separator: <!--more-->
