--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown: redcarpet
 highlighter: pygments # or rouge or null
 exclude: ["node_modules", "gulpfile.js", "package.json"]
 include: ['_pages']
-baseurl: "/ibrewmyowncoffee"
+baseurl: "/ibrewmyowncoffee-archive"
 url: "http://alexcarpenter.me"
 permalink: /:categories/:title
 excerpt_separator: <!--more-->
